infra/k8s/commetn-depl.yaml
apiVersion : apps/v1
kind : Deployment
metadata : 
  name : comment-depl
spec : 
  replicas : 1
  selector :
    matchLabels :
      app : comment
  template : 
    metadata :
      labels :
        app : comment
    spec :
      containers : 
        - name : comment
          image: alifhossain/comment


---
apiVersion : v1
kind: Service
metadata : 
  name : comment
spec :
  selector :
    app : comment
  ports :
    - name : comment
      protocol: TCP
      port : 4001
      targetPort: 4001
