infra/k8s/post-serv-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-srv-cluster
spec:
  selector:
    app: posts
  ports:
    - name : posts
      protocol: TCP
      port: 4000
      targetPort: 4000
