infra/k8s/query-hub-depl.yaml
apiVersion : apps/v1
kind : Deployment
metadata : 
  name : query-hub-depl
spec : 
  replicas : 1
  selector :
    matchLabels :
      app : query-hub
  template : 
    metadata :
      labels :
        app : query-hub
    spec :
      containers : 
        - name : query-hub
          image: alifhossain/query-hub

---
apiVersion : v1
kind: Service
metadata : 
  name : query-hub
spec :
  selector :
    app : query-hub
  ports :
    - name : query-hub
      protocol: TCP
      port : 4002
      targetPort: 4002
