infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations :
    kubernetes.io/ingress.class : nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: posts.com
    http:
      paths:
      - path: /posts/create
        backend:
          serviceName: post-srv-cluster
          servicePort : 4000

      - path: /posts
        backend:
          serviceName: query-hub
          servicePort : 4002

      - path: /posts/?(.*)/comments
        backend:
          serviceName: comment
          servicePort : 4001

      - path: /?(.*)
        backend:
          serviceName: client
          servicePort : 3000
